# fixed-macro

./: Cargo.toml
impl/: Cargo.toml
impl/src/: lib.rs
types/: Cargo.toml
