# Copyright © 2020 Ivan Smirnov

# Copying and distribution of this file, with or without modification,
# are permitted in any medium without royalty provided the copyright
# notice and this notice are preserved. This file is offered as-is,
# without any warranty.

[package]
name = "fixed-macro"
version = "1.2.0"
authors = ["Ivan Smirnov <i.s.smirnov@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aldanor/fixed-macro"
documentation = "https://docs.rs/fixed-macro"
readme = "README.md"
description = "Macros for creating fixed-point constants for types in the `fixed` crate."
keywords = ["mathematics", "numerics", "fixed"]
categories = ["algorithms", "data-structures", "science"]

[workspace]
members = [".", "impl", "types"]

[dependencies]
fixed = "2.0.0-alpha.27.0"
fixed-macro-impl = {path = "impl"}  
fixed-macro-types = {path = "types"}

[dev-dependencies]
trybuild = "1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
