[package]
name = "fixed-macro-impl"
version = "1.2.0"
authors = ["Ivan Smirnov <i.s.smirnov@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aldanor/fixed-macro"
documentation = "https://docs.rs/fixed-macro"
description = "Proc-macro implementation for the `fixed-macro` crate."

[lib]
proc-macro = true

[dependencies]
fixed = "2.0.0-alpha.27.0"
paste = "1"
proc-macro2 = "1"
proc-macro-error = "1"
quote = "1"
syn = { version = "2", features = ["parsing", "proc-macro"], default-features = false }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
