[package]
name = "fixed-macro-types"
version = "1.2.0"  # !V
authors = ["Ivan Smirnov <i.s.smirnov@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aldanor/fixed-macro"
documentation = "https://docs.rs/fixed-macro"
description = "Macro aliases used in the `fixed-macro` crate."

[dependencies]
fixed = "2.0.0-alpha.27.0"
fixed-macro-impl = { path = "../impl" }  # !V

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
